# rust-microservice-demo

java-consumer/: pom.xml
java-consumer/src/main/java/me/liangdi/cloud/rustmicroserviceconsumer/entity/: Message.java
java-consumer/src/main/java/me/liangdi/cloud/rustmicroserviceconsumer/service/: OpenFeignRustService.java
java-consumer/src/main/java/me/liangdi/cloud/rustmicroserviceconsumer/web/: ConnectRustServiceController.java  RestTemplateController.java
rust-microservice/: Cargo.toml
rust-microservice/src/: main.rs
