[package]
name = "rust-microservice"
version = "0.1.0"
authors = ["Liangdi <wu@liangdi.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web =  { version = "4", features = ["actix-web-codegen", "compress-brotli", "compress-gzip", "compress-zstd", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.10" , features= ["blocking"]}
async-std = "1.5"
percent-encoding = "2.1.0"
